对领域层添加了相关注释
1 对领域层添加了相关注释
2 移除一些无用代码
3 移除Site下一些无用的根
4 希望添加一些登录js加密后后台解密的功能  未实现

后续
1Job部分接口少了JobSuccess和其相关应用
2Site下GoodConditions这个并无多大作用的根 最好能从数据库移除

--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site.csproj
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site.csproj
@@ -378,6 +378,7 @@
     <Content Include="Content\js\Debug\log4javascript1.4.3.js" />
     <Content Include="Content\js\jquery-1.8.2.min.js" />
     <Content Include="Content\js\jquery.SuperSlide.js" />
+    <Content Include="Content\js\md5.js" />
     <Content Include="Content\js\slider.js" />
     <Content Include="Content\js\Transfer\TransferGoodsEvent.js" />
     <Content Include="Content\js\instant.js" />
