--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site.Tests/Fx.InformationPlatform.Site.Tests.csproj
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site.Tests/Fx.InformationPlatform.Site.Tests.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Data\CreateUrl.cs" />
     <Compile Include="DbCreate\CreateDatabase.cs" />
     <Compile Include="Email\EmailTest.cs" />
+    <Compile Include="Md5\Md5Test.cs" />
     <Compile Include="Migrations\Site.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site\UnitTest1.cs" />
@@ -120,6 +121,10 @@
     <ProjectReference Include="..\Fx.Entity\Fx.Entity.csproj">
       <Project>{dff0501c-dcff-4d13-a6ef-bfa9404e09dc}</Project>
       <Name>Fx.Entity</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Fx.Infrastructure\Fx.Infrastructure.csproj">
+      <Project>{41138e06-4c15-4641-9207-d0bf5c9f32da}</Project>
+      <Name>Fx.Infrastructure</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
