--- a/Fx.InformationPlatform.Site/Fx.Infrastructure/Fx.Infrastructure.csproj
+++ b/Fx.InformationPlatform.Site/Fx.Infrastructure/Fx.Infrastructure.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Net\Mail.cs" />
     <Compile Include="Net\MailManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\Md5.cs" />
     <Compile Include="Tasks\IStartupTask.cs" />
     <Compile Include="Valide\EmailCheckAttribute.cs" />
     <Compile Include="Valide\MobileCheckAttribute.cs" />
