对实体层和基础设施层添加了相关注释
1 移除实体层中无用的枚举
2 修改实体层中无效的vitual关键字
3 删除实体层中无效的类
4 删除基础设施层中无效代码

--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site.Tests/Fx.InformationPlatform.Site.Tests.csproj
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site.Tests/Fx.InformationPlatform.Site.Tests.csproj
@@ -98,6 +98,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\BrowserInfo.cs" />
     <Compile Include="Data\DataCreateTest.cs" />
     <Compile Include="Data\CreateUrl.cs" />
     <Compile Include="DbCreate\CreateDatabase.cs" />
@@ -109,6 +110,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
+    <Content Include="Data\TextFile1.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
