--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site.csproj
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site.csproj
@@ -30,6 +30,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Fx.InformationPlatform.Site.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -747,9 +748,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Account\ResetPassword.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Home\Test.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
