--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Config/AppSetting.config
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Config/AppSetting.config
@@ -5,13 +5,11 @@
 	<add key="JavaScriptDomain" value="http://javascript.yingtao1.co.uk/"></add>
 	<add key="CssDomain" value="http://css.yingtao1.co.uk/"></add>
 	<add key="ImageDomain" value="http://image.yingtao1.co.uk/"></add>
-
 	<add key="ImageUploadCdnDomain" value="http://uploadcdn.yingtao1.co.uk/"></add>
-
+	
+	<!--允许上传图片的类型-->
 	<add key="PictureMIME" value="jpg|jpeg|png|gif|bmp"/>
-
-
-
+	
 	<!--FxTask-->
 	<add key="TaskShutDown" value="false"/>
 	<!--任务是否停止 用于下线发布-->
@@ -24,7 +22,6 @@
 	<!--D:\hosting\9992249\html\imagecdn\-->
 	<add key="WriteInnerInfo" value="true"/>
 	<add key="WriteInnerInfoPath" value="D:\JobTxt\FxTaskInner.log"/>
-
 
 	<!--Login-->
 	<add key="FormDomain" value=".yingtao.co.uk"/>
