完全解决SQL注入的问题

--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site.csproj
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site.csproj
@@ -102,7 +102,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Quartz">
-      <HintPath>..\packages\Quartz.NET-2.0\bin\4.0\release\Quartz\Quartz.dll</HintPath>
+      <HintPath>..\..\..\..\packages\Quartz.NET-2.0\bin\4.0\release\Quartz\Quartz.dll</HintPath>
     </Reference>
     <Reference Include="RazorEngine">
       <HintPath>..\packages\fluent-email.1.1.0\lib\net40\RazorEngine.dll</HintPath>
