--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Config/DataBase.config
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Config/DataBase.config
@@ -1,15 +1,11 @@
 ﻿<connectionStrings>
-	<add name="fx.goods-sqlserver" providerName="System.Data.SqlClient" connectionString="Data Source=.\sqlexpress;Initial Catalog=FxGoods;User ID=sa; Password=sa"/>
-	<add name="fx.car-sqlserver" providerName="System.Data.SqlClient" connectionString="Data Source=.\sqlexpress;Initial Catalog=FxCar;User ID=sa; Password=sa"/>
-	<add name="fx.house-sqlserver" providerName="System.Data.SqlClient" connectionString="Data Source=.\sqlexpress;Initial Catalog=FxHouse;User ID=sa; Password=sa"/>
-	<add name="fx.aggregate-sqlserver" providerName="System.Data.SqlClient" connectionString="Data Source=.\sqlexpress;Initial Catalog=FxAggregate;User ID=sa; Password=sa"/>
-	<add name="fx.collectinfo-sqlserver" providerName="System.Data.SqlClient" connectionString="Data Source=.\sqlexpress;Initial Catalog=FxCollectInfo;User ID=sa; Password=sa"/>
+	<add name="fx.goods-sqlserver" providerName="System.Data.SqlClient" connectionString="Data Source=.\FENGXING;Initial Catalog=FxGoods;User ID=sa; Password=sa"/>
+	<add name="fx.car-sqlserver" providerName="System.Data.SqlClient" connectionString="Data Source=.\FENGXING;Initial Catalog=FxCar;User ID=sa; Password=sa"/>
+	<add name="fx.house-sqlserver" providerName="System.Data.SqlClient" connectionString="Data Source=.\FENGXING;Initial Catalog=FxHouse;User ID=sa; Password=sa"/>
+	<add name="fx.aggregate-sqlserver" providerName="System.Data.SqlClient" connectionString="Data Source=.\FENGXING;Initial Catalog=FxAggregate;User ID=sa; Password=sa"/>
+	<add name="fx.collectinfo-sqlserver" providerName="System.Data.SqlClient" connectionString="Data Source=.\FENGXING;Initial Catalog=FxCollectInfo;User ID=sa; Password=sa"/>
 
-	<add name="elmah-sqlserver"   providerName="System.Data.SqlClient" connectionString="Data Source=.\sqlexpress;Initial Catalog=fxdbone;User ID=sa; Password=sa"/>
-	<add name="fx.site-sqlserver"   providerName="System.Data.SqlClient" connectionString="Data Source=.\sqlexpress;Initial Catalog=fxdbone;User ID=sa; Password=sa"/>
-
-	<add name="fx.goods-mysql" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;User Id=root;password=1234;database=FxGoods"/>
-	<add name="fx.car-mysql" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;User Id=root;password=1234;database=FxCar"/>
-	<add name="fx.house-mysql" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;User Id=root;password=1234;database=FxHouse"/>
-	<add name="fx.aggregate-mysql" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;User Id=root;password=1234;database=FxAggregate"/>
+	<add name="elmah-sqlserver"   providerName="System.Data.SqlClient" connectionString="Data Source=.\FENGXING;Initial Catalog=FxConfigElmah;User ID=sa; Password=sa"/>
+	<add name="fx.site-sqlserver"   providerName="System.Data.SqlClient" connectionString="Data Source=.\FENGXING;Initial Catalog=FxConfigUser;User ID=sa; Password=sa"/>
+  <add name="fx.config-sqlserver"   providerName="System.Data.SqlClient" connectionString="Data Source=.\FENGXING;Initial Catalog=FxConfig;User ID=sa; Password=sa"/>
 </connectionStrings>
