--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Config/AppSetting.config
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Config/AppSetting.config
@@ -2,8 +2,8 @@
 	<add key="webpages:Version" value="1.0.0.0"/>
 	<add key="ClientValidationEnabled" value="true"/>
 	<add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-	<add key="JavaScriptDomain" value="http://javascript.yingtao1.co.uk/"></add>
-	<add key="CssDomain" value="http://css.yingtao1.co.uk/"></add>
+	<add key="JavaScriptDomain" value="http://javascript.yingtao.co.uk/"></add>
+	<add key="CssDomain" value="http://css.yingtao.co.uk/"></add>
 	<add key="ImageDomain" value="http://image.yingtao1.co.uk/"></add>
 	<add key="ImageUploadCdnDomain" value="http://uploadcdn.yingtao1.co.uk/"></add>
 	
