--- a/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Web.config
+++ b/Fx.InformationPlatform.Site/Fx.InformationPlatform.Site/Web.config
@@ -44,7 +44,7 @@
 		</profile>-->
     <membership defaultProvider="fx.user.MembershipProvider">
       <providers>
-        <add name="fx.user.MembershipProvider" type="System.Web.Security.SqlMembershipProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" connectionStringName="fx.site-sqlserver" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" applicationName="yingtao" requiresUniqueEmail="false" passwordFormat="Hashed" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" passwordStrengthRegularExpression="" />
+        <add name="fx.user.MembershipProvider" type="System.Web.Security.SqlMembershipProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" connectionStringName="fx.user-sqlserver" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" applicationName="yingtao" requiresUniqueEmail="false" passwordFormat="Hashed" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" passwordStrengthRegularExpression="" />
       </providers>
     </membership>
     <sessionState mode="InProc" cookieless="false" timeout="60"></sessionState>
