--- a/Fx.InformationPlatform.Site/Fx.Infrastructure/Fx.Infrastructure.csproj
+++ b/Fx.InformationPlatform.Site/Fx.Infrastructure/Fx.Infrastructure.csproj
@@ -66,10 +66,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy /V "$(TargetDir)\Fx.Infrastructure.dll" "E:\Program Files\GitHubWorkspace\net\packages\Fx\Fx.Infrastructure.dll"
-copy /V "$(TargetDir)\Fx.Infrastructure.pdb" "E:\Program Files\GitHubWorkspace\net\packages\Fx\Fx.Infrastructure.pdb"
-copy /V "$(TargetDir)\Fx.Infrastructure.XML" "E:\Program Files\GitHubWorkspace\net\packages\Fx\Fx.Infrastructure.XML"
-copy /V "$(TargetDir)\Fx.Infrastructure.dll" "E:\Program Files\GitHubWorkspace\net\packages\Fx\Fx.Infrastructure.dll"</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
